# fairground

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-web.yml  generate-metadata.yml  publish.yml  tests.yml
docs/: cli.md  index.md
docs/api/: collection.md  collections.md  dataset.md  datasets.md  scenario.md  transform.md
docs/assets/: fairground-logo-bg.af  fairground-logo-bg.afdesign
docs/guide/: getting-started.md
fairground/: __main__.py  collection.py  dataset.py  setup.py  transform.py
fairground/data/final/: annotations.csv
fairground/processing/: annotations.py  datasets.py  helpers.py
fairground/processing/scripts/: communities.py  compas_train_test_val_csv.py  drug.py  folktables_acsincome_small.py  folktables_acstraveltime_small.py  hmda.py  lipton_synthetic_hiring_dataset.py  meps_panel_19_fy2015.py  south_german_credit.py
fairml_datasets/: __init__.py  __main__.py  collections.py  dataset.py  datasets.py  file_handling.py  metadata.py  scenario.py  setup.py  transform.py
fairml_datasets/data/: .gitignore  __init__.py
fairml_datasets/data/final/: annotations.csv
fairml_datasets/processing/: __init__.py  annotations.py  datasets.py
fairml_datasets/processing/scripts/: _example.py  communities_unnormalized.py  compas_2_years.py  creditcard.py  folktables_acsemployment.py  folktables_acsemployment_small.py  folktables_acsincome.py  folktables_acsmobility.py  folktables_acsmobility_small.py  folktables_acspubliccoverage.py  folktables_acspubliccoverage_small.py  folktables_acstraveltime.py  generate_synthetic_data.py  german_credit.py  german_credit_numeric.py  german_credit_onehot.py  hmda.py  (+4 more)
tests/: test_Dataset.py  test_Datasets.py  test_cli.py  test_file_handling.py  test_metadata.py  test_processing.py  test_processing_datasets.py  test_scenario.py  test_transform.py
tests/mock_cache/: README.md
website/: .gitignore  about.md  biome.json  fullscreen.md  generate_pages.js  index.md  package-lock.json  package.json
website/.vitepress/: config.mts
website/collections/: DeCorrelatedSmall.md  DecorrelatedLarge.md  GeographicFull.md  GeographicLarge.md  GeographicSmall.md  PermissivelyLicensedFull.md  PermissivelyLicensedLarge.md  PermissivelyLicensedSmall.md
website/components/: CollectionDetails.vue  DatasetDetails.vue  HighlightedCode.vue  MetadataTable.vue
website/data/: collection_decor_large.json  collection_decor_small.json  collection_geo_all.json  collection_geo_large.json  collection_geo_small.json  collection_open_licensed_all.json  collection_open_licensed_large.json  collection_open_licensed_small.json  collections.data.js  metadata.data.js  metadata.json
(+5 files in other folders)
