[project]
name = "fairml-datasets"
version = "0.1.1"
description = "A package for managing and processing datasets for fairness research in machine learning"
readme = "README.md"
license = {text = "CC BY 4.0"}
requires-python = ">=3.10"
dependencies = [
    "aif360>=0.6.1",
    "click>=8.1.7",
    "fastparquet>=2024.11.0",
    "folktables>=0.0.12",
    "rich>=13.9.4",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fairml_datasets"]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.3",
]

[project.optional-dependencies]
test = ["pytest", "ruff"]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-click",
]
